tests/ui/rfcs/rfc-2093-infer-outlives/self-dyn.stderr
error: rustc_outlives
  --> $DIR/self-dyn.rs:8:1
   |
LL | struct Foo<'a, 'b, A>
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: A: 'a

error: aborting due to previous error

